Thu Apr 11 22:59:34 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* NSSavePanel-test/NSSavePanel-test.m ([NSSavePanelTest -init]): Updated 
	for newer gnustep-gui: no longer adjust manually button size, 
	the new gnustep-gui gets them right automatically.
	* StringDrawing-test/StringDrawing-test.m ([StringDrawingTest
	-init]): Idem.
	* NSWindowStyleMask-test/NSWindowStyleMask-test.m
	([NSWindowStyleMaskTest -init]): Idem.
	* EncodingDecoding-test/EncodingDecoding-test.m
	([EncodingDecodingTest -init]): Idem.
	* main.m: Version 1.0.	

2002-03-22  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* NSTableView-test/NSTableView-test.m : 
	Modified to use drag'n'drop.
	keys, values and test are now declared as static.
	* NSOutlineView-test/NSOutlineView-test.m 
	Modified to use drag'n'drop.
	keys, values and test are now declared as static.
	
2002-03-05  Gregory John Casamento <greg_casamento@yahoo.com>

	* NSOutlineView-test/NSOutlineView-test.m made modifications
	to the [NSOutlineViewTest -outlineView:child:ofItem:] method
	to return children starting from zero instead of one.

2002-03-05  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* NSTableView-test/NSTableView-test.m ([NSTableViewTest -init]): 
	Set minWidth for all columns. Don't call sizeToFit: anymore.

Mon Mar  4 09:31:04 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* main.m (main): Set to nil the listed test instances at startup;
	do not dealloc pools after termination of program.
	([Controller -dealloc]): Destroy the test instances.
	([Controller -loadAndStartTestWithBundlePath:]): Autorelease the
	returned object.
	([Controller -startListedTest:]): Retain the new bundle principal
	class instance.
	([Controller -applicationWillTerminate:]): New method.
	
Sat Feb 27 01:54:10 2002  Gregory Casamento <greg_casamento@yahoo.com>

	* NSOutlineView-test/NSOutlineView-test.m:  Added code to test
	indentation in NSOutlineView.

Sat Feb 23 13:08:47 2002  Gregory Casamento <greg_casamento@yahoo.com>
